fixed horisontal scrollbar and link

--- a/css/get-involved.css
+++ b/css/get-involved.css
@@ -19,7 +19,7 @@
     font-size: 2.25rem;
     position: relative;
     top: 600px;
-    left: 5%;
+    padding-left: 50px;
 }
 
 .get-involved-paragraph {
