--- a/css/style.css
+++ b/css/style.css
@@ -151,9 +151,14 @@ h4,
     margin: 5px;
 }
 
+.footer-content a {
+    text-decoration: none;
+}
+
 .fa-brands,
 .footer-content{
     color: var(--text-light-clr);
+    text-decoration: none;
 }
 
 .footer-mobile {
